cros: Fix ui::InputDeviceManager usage for mash

The ash process now has an InputDeviceManager, so we don't need to
check for null or skip tests that use it.

Convert PaletteTrayTests to avoid usage of DeviceDataManagerTestAPI,
since DeviceDataManager doesn't exist on mash.

Bug: 682460, 734812
Test: ash_unittests
Change-Id: If0d75de124af664f530f6cce5af6f95588c8265c