ash/system/palette/palette_tray_test_api.h
@@ -32,6 +32,10 @@ class PaletteTrayTestApi {
     return palette_tray_->bubble_.get();
   }
 
+  void OnStylusStateChanged(ui::StylusState state) {
+    palette_tray_->OnStylusStateChanged(state);
+  }
+
   bool IsStylusWatcherActive() { return !!palette_tray_->watcher_; }
 
  private:
