services/ui/public/cpp/input_devices/input_device_client.h
@@ -39,13 +39,12 @@ class InputDeviceClient : public mojom::InputDeviceObserverMojo,
       const override;
   const std::vector<ui::InputDevice>& GetMouseDevices() const override;
   const std::vector<ui::InputDevice>& GetTouchpadDevices() const override;
-
   bool AreDeviceListsComplete() const override;
   bool AreTouchscreensEnabled() const override;
   bool AreTouchscreenTargetDisplaysValid() const override;
-
   void AddObserver(ui::InputDeviceEventObserver* observer) override;
   void RemoveObserver(ui::InputDeviceEventObserver* observer) override;
+  void OnStylusStateChangedForTesting(StylusState state) override;
 
  protected:
   // Default constructor registers as InputDeviceManager. Can be subclassed in
