ash/system/status_area_widget_unittest.cc
@@ -23,7 +23,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ash/test/ash_test_base.h"
 #include "base/command_line.h"
 #include "components/session_manager/session_manager_types.h"
-#include "ui/aura/env.h"
 
 using session_manager::SessionState;
 
@@ -180,32 +179,23 @@ TEST_F(StatusAreaWidgetFocusTest, FocusOutObserver) {
 
 class StatusAreaWidgetPaletteTest : public AshTestBase {
  public:
-  StatusAreaWidgetPaletteTest() {}
-  ~StatusAreaWidgetPaletteTest() override {}
+  StatusAreaWidgetPaletteTest() = default;
+  ~StatusAreaWidgetPaletteTest() override = default;
 
   // testing::Test:
   void SetUp() override {
-    // TODO(erg): The implementation of PaletteTray assumes it can talk directly
-    // to ui::InputDeviceManager in a mus environment, which it can't.
-    if (aura::Env::GetInstance()->mode() != aura::Env::Mode::MUS) {
-      base::CommandLine* cmd = base::CommandLine::ForCurrentProcess();
-      cmd->AppendSwitch(switches::kAshForceEnableStylusTools);
-      // It's difficult to write a test that marks the primary display as
-      // internal before the status area is constructed. Just force the palette
-      // for all displays.
-      cmd->AppendSwitch(switches::kAshEnablePaletteOnAllDisplays);
-    }
+    base::CommandLine* cmd = base::CommandLine::ForCurrentProcess();
+    cmd->AppendSwitch(switches::kAshForceEnableStylusTools);
+    // It's difficult to write a test that marks the primary display as
+    // internal before the status area is constructed. Just force the palette
+    // for all displays.
+    cmd->AppendSwitch(switches::kAshEnablePaletteOnAllDisplays);
     AshTestBase::SetUp();
   }
 };
 
 // Tests that the stylus palette tray is constructed.
 TEST_F(StatusAreaWidgetPaletteTest, Basics) {
-  // TODO(erg): The implementation of PaletteTray assumes it can talk directly
-  // to ui::InputDeviceManager in a mus environment, which it can't.
-  if (aura::Env::GetInstance()->mode() == aura::Env::Mode::MUS)
-    return;
-
   StatusAreaWidget* status = StatusAreaWidgetTestHelper::GetStatusAreaWidget();
   EXPECT_TRUE(status->palette_tray());
 
